<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeFly</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="goals">Goals</string>
    <string name="activity">Activity</string>
    <string name="me">Me</string>
    <string name="social">Social</string>
    <string name="log">Log</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add_goal">Add Goal</string>
    <string name="ok">OK</string>
    <string name="enter_goal_name">Enter Goal Name</string>
    <string name="how_did_it_go">Notes</string>
    <string name="finsih">Finish</string>
    <string name="enter_note">Enter Note</string>
    <string name="add_time">Set Time (mins)</string>
    <string name="enter_minutes">Enter Minutes</string>
    <string name="date_label">Date:</string>
    <string name="goal_label">Goal:</string>
	<string name="duration">Duration:</string>
	<string name="rename">Rename</string>
	<string name="about">About TimeFly</string>
	<string name="open_timer">Open Timer</string>
	<string name="back_button_disabled">Back Button Disabled Whilst Practicing.\nStop this Practice, or hit Home to use other apps</string>
	<string name="show_calendar">Show Calendar</string>
	<string name="next">Next</string>
	<string name="contact_us">Contact Us</string>
	<string name="thank_you_kindly"><![CDATA[Thank you for using TimeFly. Just like life, it’s a work in progress. Please send us your feedback &amp; ideas to mytimeflyexperience@gmail.com]]></string>
	<string name="how_it_works">How it works:</string>
	<string name="it_tracks_progress">4. It tracks your progress</string>
	<string name="where_were_you">Where were you one year ago? A month ago? Last week? You were a different person. Look back on the notes to see how far you\'ve come!</string>
	<string name="define_goals">1. Define Your Goals</string>
	<string name="learn_spanish">Ex. Learn Spanish, do more yoga, learn nuclear physics, write a book, spend quality time with your dog/cat/rabbit/self</string>
	<string name="automagical_time_management">Automagical time management for postponers.\n Making it easy and fun to get stuff done, a few minutes at a time.</string>
	<string name="it_takes_some_21">5 minutes a day is better than 1 hour once a week. Tiny consistent steps EVERY DAY become habits. It takes some 21 days to adopt a new habit.</string>
	<string name="snooze">Snooze</string>
	<string name="end">End</string>
	<string name="five_mins">5 mins</string>
	<string name="ten_mins">10 mins</string>
	<string name="half_hour">30 mins</string>
	<string name="manually">Manually</string>
	<string name="minutes">minutes</string>
</resources>