<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal">

	<Button
			style="@style/btnStyleSeagull"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:textSize="20dp"
			android:id="@+id/end"
			android:text="@string/end"/>

	<Button
			style="@style/btnStyleSeagull"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:textSize="20dp"
			android:id="@+id/five_mins"
			android:text="@string/five_mins"/>

	<Button
			style="@style/btnStyleSeagull"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:textSize="20dp"
			android:id="@+id/ten_mins"
			android:text="@string/ten_mins"/>

	<Button
			style="@style/btnStyleSeagull"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="20dp"
			android:textSize="20dp"
			android:id="@+id/half_hour"
			android:text="@string/half_hour"/>

</LinearLayout>