<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="30dp"
		android:gravity="left"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="15dp">
	>


	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:gravity="left"
			android:layout_marginLeft="15dp"
			android:text="@string/how_it_works"
			android:textSize="21dp"

			android:layout_marginTop="25dp"
			android:layout_marginBottom="7dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:gravity="left"
			android:text="@string/define_goals"
			android:layout_marginLeft="15dp"
			android:textSize="19dp"
			android:layout_marginBottom="7dp"/>

	<TextView
			android:layout_width="match_parent"
			android:gravity="left"
			android:layout_gravity="left"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:text="@string/learn_spanish"
			android:textSize="13dp"
			android:layout_marginBottom="17dp"/>

</LinearLayout>