<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center"
		android:background="@color/white">

	<Button
			android:layout_width="match_parent"
			style="@style/btnStyleSeagull"
			android:id="@+id/show_calendar_button"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:text="@string/show_calendar"/>

	<LinearLayout
			android:id="@+id/performance_chart"
			android:layout_height="150dp"
			android:layout_below="@id/show_calendar_button"
			android:layout_width="match_parent"
			android:orientation="vertical"/>
   <LinearLayout
		   android:id="@+id/startPracticeLayout"
		   android:layout_width="match_parent"
		   android:orientation="horizontal"
		   android:layout_alignParentBottom="true"

		   android:layout_height="wrap_content">

	   <Button
			   android:id="@+id/manuallyButton"
			   style="@style/btnStyleSeagull"
			   android:text="@string/manually"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			    android:drawableLeft="@android:drawable/ic_menu_add"
			   android:layout_marginLeft="30dp"
			               android:layout_weight="1"
			   android:layout_marginTop="10dp"
			   android:layout_marginBottom="10dp"/>
	<Button
			android:id="@+id/startPracticeButton"
			style="@style/btnStyleSeagull"
			android:text="@string/open_timer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"/>
   </LinearLayout>
	<ListView
			android:layout_below="@id/performance_chart"
			android:layout_above="@id/startPracticeLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/listview"
			/>
</RelativeLayout>